<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_centerInParent="true"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="18dp"

    android:background="#fff"
    android:padding="8dp"
   android:layout_margin="40dp"
    tools:context="bookshelf.globdig.com.bookshelf.MainActivity"
    >

    <ImageView
        android:layout_marginBottom="40dp"
        android:id="@+id/logoImage1"
        android:src="@drawable/login_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:layout_below="@+id/logoImage1"
        android:id="@+id/fname"
        android:hint="@string/fName"
        android:textStyle="italic"
        android:textColorHint="#ccc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:textStyle="italic"
        android:layout_below="@+id/fname"
        android:id="@+id/lname"
        android:hint="@string/lName"
        android:textColorHint="#ccc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText

        android:textStyle="italic"
        android:layout_below="@+id/lname"
        android:id="@+id/email"
        android:hint="@string/email"
        android:textColorHint="#ccc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:textStyle="italic"
        android:layout_below="@+id/email"
        android:id="@+id/contact"
        android:hint="@string/contact"
        android:textColorHint="#ccc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_below="@+id/contact"

        android:weightSum="2"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button

            android:id="@+id/sinup_register"
            android:layout_weight="1"
            android:background="#D3222A"
            android:textColor="#fff"
            android:text="@string/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />



      <Button
          android:layout_marginLeft="8dp"
          android:id="@+id/sinup_cancel"
          android:layout_weight="1"
          android:text="@string/cancel"
          android:background="#eee"
          android:layout_width="0dp"
          android:layout_height="wrap_content" />

    </LinearLayout>
    <TextView
        android:layout_below="@+id/buttonPanel"
        android:id="@+id/messageText"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
