<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="center_horizontal"
    tools:context="bookshelf.globdig.com.bookshelf.ChangePasswordActivity">
    <LinearLayout
        android:layout_marginTop="1dp"
        android:padding="16dp"

        android:gravity="center_vertical"
        android:background="@drawable/navigationbar"
        android:layout_alignParentTop="true"
        android:id="@+id/topBarChangePassword"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView

            android:layout_gravity="center_vertical"
            android:id="@+id/back"
            android:src="@drawable/ic_arrow_back"
            android:layout_width="20dp"
            android:layout_height="20dp" />
        <TextView
            android:id="@+id/backText"
            android:layout_marginLeft="10dp"

            android:layout_gravity="center_vertical"

            android:text="Travel News Magazine"
            android:textColor="#fff"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

<RelativeLayout
    android:layout_centerInParent="true"
    android:layout_width="300dp"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:layout_height="wrap_content"

    android:background="#fff"
    android:padding="8dp"
    android:layout_below="@id/topBarChangePassword"

   >
    <ImageView
        android:layout_marginBottom="24dp"
        android:id="@+id/logoImagee"
        android:src="@drawable/login_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@android:color/holo_red_dark"
        android:layout_below="@+id/logoImagee"
        android:id="@+id/messageTxtCp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:layout_below="@+id/messageTxtCp"
        android:layout_marginTop="40dp"
         android:textStyle="italic"
        android:textSize="14sp"
        android:paddingLeft="8dp"

        android:hint="@string/Old_password"

        android:textColorHint="#ccc"
        android:id="@+id/oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:textStyle="italic"
        android:textSize="14sp"
        android:paddingLeft="8dp"
        android:hint="@string/New_password"
        android:textColorHint="#ccc"
        android:layout_below="@id/oldPassword"
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:textStyle="italic"
        android:textSize="14sp"
        android:paddingLeft="8dp"
        android:textColorHint="#ccc"
        android:hint="@string/Confirm_password"
        android:layout_below="@id/newPassword"
        android:id="@+id/confirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="8dp"
        android:layout_marginBottom="140dp"
        android:padding="8dp"

        android:background="#D3222A"
        android:textColor="#fff"
        android:id="@+id/changePassword"
        android:layout_below="@id/confirmNewPassword"
        android:text="@string/Change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
    </RelativeLayout>
