<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="top|left"
    android:layout_height="wrap_content"
    android:background="#fff"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
   >
    <EditText
        android:layout_alignParentTop="true"
        android:drawableLeft="@drawable/toolbar_find"
        android:hint="@string/search"
        android:theme="@style/MyEditTextTheme"
        android:textColorHint="#ccc"
        android:textSize="14sp"
        android:textStyle="italic"
        android:paddingLeft="10dp"
        android:id="@+id/searchField"

        android:layout_width="match_parent"
        android:layout_height="44dp" />
    <TextView
        android:layout_below="@id/searchField"
        android:id="@+id/list_empty"
        android:text="No magazine to show"
        android:visibility="gone"
        android:textColor="#000"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_below="@id/list_empty"
        android:id="@+id/activity_main_swipe_refresh_layout"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ListView


        android:id="@+id/allMagazinesList"
        android:layout_width="match_parent"
        android:divider="#E8E9E9"


        android:dividerHeight="1dp"

        android:layout_height="wrap_content"></ListView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:visibility="gone"
        android:padding="10dp"
        android:layout_below="@id/profile_buttons"
        android:orientation="vertical"
        android:id="@+id/settings"
        android:layout_marginLeft="50dp"

        android:layout_height="match_parent"
        android:layout_marginTop="50dp"

        android:layout_width="300dp">
        <LinearLayout
            android:gravity="center_vertical"
            android:id="@+id/email_us"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_email1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/Email_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/profile_us"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_person_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/change_password"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/Change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/logout"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginLeft="10dp"
                android:text="@string/Logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>



</RelativeLayout>
